[package]
name = "binance_bot"
version = "0.1.0"
edition = "2024"

[dependencies]
dotenvy = "0.15"
reqwest = { version = "0.12", features = ["json"]}
serde_json = "1.0"
tokio = { version = "1", features = ["full"]}
tokio-tungstenite = { version = "0.26", features = ["native-tls"] }
futures-util = "0.3"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"


